Fixes #1588: Do not truncate values in the side panel

--- a/app/styles/key_value.less
+++ b/app/styles/key_value.less
@@ -27,10 +27,9 @@
       color: @gray6;
       margin-left: 0;
       margin-bottom: 23px;
-      overflow: hidden;
-      text-overflow: ellipsis;
       width: 100%;
-      white-space: nowrap;
+      white-space: normal;
+      word-break: break-all;
 
       .modal-container {
         display: inline-block;
